--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -231,6 +231,7 @@
 
 		<header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow" data-bs-theme="dark">
 			<a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="#">Company name</a>
+				<a class="nav-link px-3 text-white" href="{{ path('app_logout') }}">Sign out</a> 
 
 			<ul class="navbar-nav flex-row d-md-none">
 				<li class="nav-item text-nowrap">
@@ -246,6 +247,8 @@
 			</ul>
 
 			<div id="navbarSearch" class="navbar-search w-100 collapse">
+				<div class="nav-item text-nowrap danger">
+				</div>
 				<input class="form-control w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
 			</div>
 		</header>
